<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>TDT4100_project</groupId>
    <artifactId>tdt4100_v2024_prosjekt_boilerplate</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
 
    <name>tdt4100_v2024_prosjekt_boilerplate</name>
	

   <dependencies>

		 <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>4.5.6</version>
        </dependency>
        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>4.5.6</version>
            <classifier>models</classifier>
        </dependency>


        <dependency>
            <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>3.9.0</version>
                <scope>test</scope>
        </dependency>


		 <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.17.2</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.11</version> 
        </dependency> 
		    

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>21.0.2</version>
        </dependency>



        
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>21.0.2</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21.0.2</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.2</version>
        </dependency>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.1</version>
        </dependency>
  </dependencies>

  <build>
	<plugins>
	    <plugin>
		    <artifactId>maven-compiler-plugin</artifactId>
		    <version>3.12.1</version>
		    <configuration>
		        <release>21</release>
		    </configuration>
	    </plugin>

	    <plugin>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-maven-plugin</artifactId>
			<version>0.0.8</version>
			<configuration>
				<options></options>
				<mainClass>exampleproject.ExampleProjectApp</mainClass>
				<!-- for jlink -->
				<compress>2</compress>
				<noHeaderFiles>true</noHeaderFiles>
				<stripDebug>true</stripDebug>
				<noManPages>true</noManPages>
				<launcher>exampleproject</launcher>
				<jlinkImageName>exampleproject</jlinkImageName>
				<jlinkZipName>exampleproject</jlinkZipName>
			</configuration>
	    </plugin>

	    <plugin>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>3.2.5</version>
		    <configuration>
			    <argLine>--enable-preview</argLine>
		    </configuration>
	    </plugin>

	    <plugin>
		    <artifactId>maven-failsafe-plugin</artifactId>
		    <version>3.2.5</version>
		    <configuration>
			    <argLine>--enable-preview</argLine>
		    </configuration>
	    </plugin>
	</plugins>
  </build>
</project>